# CirnoTorrent

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-release.yml
crates/core/: Cargo.toml
crates/core/src/: api.rs  db.rs  extraction.rs  lib.rs  rss.rs  sharing.rs  torrent.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  ExtractionQueue.tsx  Search.tsx  Settings.tsx  SharingHub.tsx  TorrentDetail.tsx  TorrentList.tsx
frontend/src/store/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
