[package]
name = "cirnotorrent-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cirnotorrent-core = { path = "../crates/core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
dirs = "5"
urlencoding = "2"
axum = "0.7"
anyhow = "1"
