[package]
name = "cirnotorrent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
librqbit = "8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
base64 = "0.22"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
futures-util = "0.3"
zip = "2"
tar = "0.4"
flate2 = "1"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.36", features = ["serialize"] }
hex = "0.4"
bytes = "1"
bzip2 = "0.4"
xz2 = "0.1"

[dev-dependencies]
tempfile = "3"
