[package]
name = "cirnotorrent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cirnotorrent-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
anyhow = "1"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["fs", "cors"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
